fdo#67615 TextField in table should use same formatting as floating TextField

Change-Id: Ia6333d12f9f1ecdd5a552089f0df8703c5fce88a