svx/source/inc/gridcell.hxx
@@ -390,7 +390,6 @@ class DbTextField : public DbLimitedLengthField
 {
     ::svt::IEditImplementation* m_pEdit;
     ::svt::IEditImplementation* m_pPainterImplementation;
-    sal_Int16                   m_nKeyType;
     bool                    m_bIsSimpleEdit;
 
 protected:
